--- a/style.css
+++ b/style.css
@@ -79,46 +79,52 @@ header {
 }
 
 .fakeTrailer .top-left {
+    border-radius: 5px;
+    background-color: rgba(77, 77, 77, 0.11);
     display: flex;
     flex-direction: column;
     position: absolute;
     top: 20px;
     left: 16px;
-    margin: 20px 5px 20px;
-    width: 100%;
+    margin: 5px 20px;
+    width: 30%;
+    height: 90%;
 }
 
 .fakeTrailer .top-left h1 {
     display: inline;
     font-size: 100px;
-    margin: 5px;
-    text-shadow: 2px 4px rgba(0, 0, 0, 0.397);
+    margin: 10px;
+    text-shadow: 2px 4px rgba(0, 0, 0, 0.550);
 }
 
 .fakeTrailer .top-left h3 {
     display: inline;
     font-size: 40px;
-    margin: 5px;
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.397);
+    margin: 10px;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.550);
 }
 
 .fakeTrailer .top-left p {
     display: inline;
     font-size: 20px;
-    width: 30%;
-    margin: 20px 5px;
-    text-shadow: 2px 1px rgba(0, 0, 0, 0.397);
+    width: 20vw;
+    margin: 20px 10px;
+    text-shadow: 2px 1px rgba(0, 0, 0, 0.550);
     line-height: 30px;
+
 }
 
-.fakeTrailer .bottom-left {
+/* .fakeTrailer .bottom-left {
+    background-color: rgba(77, 77, 77, 0.295);
     position: absolute;
     bottom: 40px;
-    left: 25px;
-}
+    left: 30px;
+    width: 30%;
+} */
 
-.fakeTrailer .bottom-left button {
-    margin-top: 20px;
+.fakeTrailer .top-left button {
+   
     width: 150px;
     height: 50px;
     border-radius: 5px;
@@ -127,9 +133,11 @@ header {
     font-weight: bold;
     font-size: 20px;
     
+    margin: 20px 30px;
+    
 }
 
-.fakeTrailer .bottom-left button:hover {
+.fakeTrailer .top-left button:hover {
     cursor: pointer;
     box-shadow: 2px 4px rgba(0, 0, 0, 0.342);
     opacity: 0.8;
@@ -138,46 +146,62 @@ header {
 /* -----------------CARDS----------------*/
 
 .carouselContainer {
-    padding: 0;
-    margin-top: 0;
+    align-items: center;
+    background-color: black;
+    color: white;
     display: flex;
-    align-items: flex-start;
+    flex-direction: row;
     flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
+    margin-top: 0;
+    padding: 0;
     width: 100%;
     height: 100%;
+    margin-bottom: 60px;
+}
+
+.carouselContainer .carouselTopTen {
+    display: flex;
+    height: 50px;
+    width: 100%;
     background-color: black;
+    align-content: center;
 }
 
 .carouselContainer .carouselTopTen h4 {
+    display: flex;
     color: white;
     font-weight: 400;
     font-size: 20px;
-    margin-top: 30px;
-    margin-left: 35px;
-
+    justify-content: center;
+    margin: 20px 25px 0;
 }
 
 .carouselContainer .carouselCard {
     width: 300px;
-    height: fit-content;
+    height: 200px;
     margin: 10px 40px;
 }
 
 .carouselContainer .carouselCard img {
-    display: block;
+    display: flex;
     cursor: pointer;
     transition: 0.3s ease;
-    height: auto;
-    overflow: hidden;
     align-items: center;
     justify-content: center;
+    width: 300px;
 }
 
 .carouselContainer .carouselCard img:hover {
     opacity: 0.5;
     transform: scale(1.1);
+}
+
+.carouselContainer .carouselCard h4 {
+    margin: 10px 0;
+}
+
+.carouselContainer .carouselCard p {
+    display: none;
 }
 
 
@@ -191,7 +215,7 @@ footer {
     flex-direction: column;
     display: flex;
     width: 100%;
-    position: fixed;
+    position: static;
     bottom: 0;
     height: 90px;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(42, 7, 99, 0.281));
