--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 
 .contenitore {
     position: relative;
+    
 }
 
 /* ---------------HEADER--------------- */
@@ -80,7 +81,7 @@ header {
 
 .fakeTrailer .top-left {
     border-radius: 5px;
-    background-color: rgba(77, 77, 77, 0.11);
+    background-color: rgba(77, 77, 77, 0.212);
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -89,6 +90,7 @@ header {
     margin: 5px 20px;
     width: 30%;
     height: 90%;
+    
 }
 
 .fakeTrailer .top-left h1 {
@@ -189,6 +191,7 @@ header {
     align-items: center;
     justify-content: center;
     width: 300px;
+    
 }
 
 .carouselContainer .carouselCard img:hover {
@@ -356,4 +359,82 @@ footer p {
     footer {
         font-size: 12px;
     }
+}
+
+/*------------------TV SERIES HTML ---------------------*/
+
+.button button {
+    background: transparent;
+    color: white;
+    border-style: none;
+    padding: 10px;
+    margin: 10px 25px;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+.button button:hover {
+    cursor: pointer;
+    background-color: #2a095034;
+}
+
+
+.tvSerieSchedaWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    font-family:'Varela Round', sans-serif;
+    color: white;
+    margin: 35px auto;
+}
+
+.tvSerieSchedaWrapper .textWrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: right;
+    height: 100%;
+    max-height: 600px;
+    padding: 30px 30px;
+    
+}
+
+.tvSerieSchedaWrapper .textWrapper h1 {
+    font-size: 50px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.tvSerieSchedaWrapper a {
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+}
+
+.tvSerieSchedaWrapper a:hover {
+    text-decoration: underline;
+}
+
+.tvSerieSchedaWrapper p {
+    width: 500px;
+    font-size: 20px;
+    word-spacing: 3px;
+    line-height: 25px;
+}
+
+.tvSerieSchedaWrapper .textWrapper h5 {
+    margin-top: 5px;
+    font-weight: 500;
+    word-spacing: 3px;
+}
+
+.tvSerieSchedaWrapper img {
+    display: flex;
+    flex-direction: row;
+    width: 400px;
+    padding: 30px 30px 40px;
 }
