--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ header {
 /* -----------------CARDS----------------*/
 
 .carouselContainer {
+    justify-content: center;
     align-items: center;
     background-color: black;
     color: white;
@@ -278,6 +279,8 @@ footer p {
         flex-wrap: wrap;
         flex-direction: column;
         align-items: center;
+        margin: 0 auto 60px auto;
+        justify-content: center;
     }
 
     .carouselContainer .carouselTopTen h4 {
@@ -285,12 +288,14 @@ footer p {
         align-items: center;
         width: 100%;
         justify-content: center;
-        margin-left: 0;
+        margin: auto;
+        text-align: center;
     }
 
     .carouselContainer .carouselCard img {
         margin: auto;
         padding: 0;
+        align-items: center;
     }
 
     footer {
