--- a/style.css
+++ b/style.css
@@ -94,26 +94,27 @@ header {
 }
 
 .fakeTrailer .top-left h1 {
-    display: inline;
+    display: flex;
     font-size: 100px;
     margin: 10px;
     text-shadow: 2px 4px rgba(0, 0, 0, 0.550);
 }
 
 .fakeTrailer .top-left h3 {
-    display: inline;
+    display: flex;
     font-size: 40px;
     margin: 10px;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.550);
 }
 
 .fakeTrailer .top-left p {
-    display: inline;
+    display: flex;
     font-size: 20px;
-    width: 100%;
+    width: 96%;
     margin: 20px 10px;
     text-shadow: 2px 1px rgba(0, 0, 0, 0.550);
     line-height: 30px;
+    overflow-block: 0;
 
 }
 
@@ -134,7 +135,6 @@ header {
     font-family: 'Varela Round', sans-serif;
     font-weight: bold;
     font-size: 20px;
-    
     margin: 20px 30px;
     
 }
@@ -176,7 +176,7 @@ header {
     font-weight: 400;
     font-size: 20px;
     justify-content: center;
-    margin: 20px 25px 0;
+    margin: 20px 35px 0;
 }
 
 .carouselContainer .carouselCard {
@@ -256,6 +256,7 @@ footer p {
     }
     .navbar .navbarElements ul {
         display: flex;
+        justify-content: center;
         flex-direction: column;
         align-items: center;
         gap: 0;
@@ -363,6 +364,77 @@ footer p {
     
     footer {
         font-size: 12px;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1580px) {
+    
+    .fakeTrailer {
+        position: relative;
+        text-align: left;
+        color: white;
+    }
+    
+    .fakeTrailer img {
+        position: relative;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        max-width: 100%;
+        max-height: 600px;
+    }
+    
+    .fakeTrailer .top-left {
+        border-radius: 5px;
+        background-color: rgba(77, 77, 77, 0.212);
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        left: 16px;
+        margin: 0;
+        width: 50%;
+        height: 90%;
+    
+    }
+    
+    .fakeTrailer .top-left h1 {
+        display: flex;
+        font-size: 60px;
+        margin: 10px;
+        text-shadow: 2px 4px rgba(0, 0, 0, 0.550);
+    }
+    
+    .fakeTrailer .top-left h3 {
+        display: flex;
+        font-size: 20px;
+        margin: 10px;
+        text-shadow: 2px 2px rgba(0, 0, 0, 0.550);
+    }
+    
+    .fakeTrailer .top-left p {
+        display: flex;
+        font-size: 18px;
+        width: 96%;
+        margin: 20px 10px;
+        text-shadow: 2px 1px rgba(0, 0, 0, 0.550);
+        line-height: 20px;
+        overflow-block: 0;
+    
+    }
+
+    .fakeTrailer .top-left button {
+    
+        width: 100px;
+        height: 50px;
+        border-radius: 5px;
+        border-style: none;
+        font-family: 'Varela Round', sans-serif;
+        font-weight: bold;
+        font-size: 20px;
+        margin: 5px 10px;
+    
     }
 }
 
