--- a/style.css
+++ b/style.css
@@ -243,12 +243,97 @@ footer p {
     color: white;
 }
 
+/*------------------TV SERIES HTML ---------------------*/
+
+.button button {
+    background: transparent;
+    color: white;
+    border-style: none;
+    padding: 10px;
+    margin: 10px 25px;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+.button button:hover {
+    cursor: pointer;
+    background-color: #2a095034;
+}
+
+
+.tvSerieSchedaWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    font-family: 'Varela Round', sans-serif;
+    color: white;
+    margin: 35px auto;
+}
+
+.tvSerieSchedaWrapper .textWrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: right;
+    height: 100%;
+    max-height: 600px;
+    padding: 30px 30px;
+
+}
+
+.tvSerieSchedaWrapper .textWrapper h1 {
+    font-size: 50px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.tvSerieSchedaWrapper a {
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+}
+
+.tvSerieSchedaWrapper a:hover {
+    text-decoration: underline;
+}
+
+.tvSerieSchedaWrapper p {
+    width: 500px;
+    font-size: 20px;
+    word-spacing: 3px;
+    line-height: 25px;
+}
+
+.tvSerieSchedaWrapper .textWrapper h5 {
+    margin-top: 5px;
+    font-weight: 500;
+    word-spacing: 3px;
+}
+
+.tvSerieSchedaWrapper img {
+    display: flex;
+    flex-direction: row;
+    width: 400px;
+    padding: 30px 30px 40px;
+}
+
+/*--------------------------------------------MEDIA QUERIES --------------------------------------------*/
+
 /* ---------------RESPONSIVE SMARTPHONES--------------- */
 
 @media (max-width: 500px) {
+    .contenitore {
+        width: 100%;
+        
+    }
     .navbar {
         height: auto;
         flex-direction: column;
+        justify-content: center;
     }
 
     .navbar a {
@@ -302,7 +387,65 @@ footer p {
     footer {
         font-size: 12px;
     }
+
+    .button #btn {
+        display: flex;
+        width: 90px;
+        height: 40px;
+        font-size: 15px;
+        line-height: 10px;
+        margin: 10px auto;
+        text-align: center;
+    }
+
+    .tvSerieSchedaWrapper {
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex-wrap: wrap;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    .tvSerieSchedaWrapper .textWrapper {
+        display: flex;
+        width: 90%;
+        margin: 0 auto;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+    }
+
+    .tvSerieSchedaWrapper .textWrapper h1 {
+        font-size: 30px;
+        margin-top: 0;
+        text-align: center;
+    }
+
+    .tvSerieSchedaWrapper .textWrapper a {
+        font-size: 20px;
+    }
+
+    .tvSerieSchedaWrapper .textWrapper p {
+        font-size: 15px;
+        display: flex;
+        flex-wrap: wrap;
+        width: 90%;
+    }
+
+    .tvSerieSchedaWrapper img {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        order: 1;
+        max-width: 80%;
+    }
 }
+
 
 /* ---------------RESPONSIVE TABLETS--------------- */
 
@@ -366,6 +509,8 @@ footer p {
         font-size: 12px;
     }
 }
+
+/* ---------------RESPONSIVE MIN 1024 MAX 1580 --------------- */
 
 @media (min-width: 1024px) and (max-width: 1580px) {
     
@@ -438,80 +583,3 @@ footer p {
     }
 }
 
-/*------------------TV SERIES HTML ---------------------*/
-
-.button button {
-    background: transparent;
-    color: white;
-    border-style: none;
-    padding: 10px;
-    margin: 10px 25px;
-    font-size: 20px;
-    border-radius: 10px;
-}
-
-.button button:hover {
-    cursor: pointer;
-    background-color: #2a095034;
-}
-
-
-.tvSerieSchedaWrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    font-family:'Varela Round', sans-serif;
-    color: white;
-    margin: 35px auto;
-}
-
-.tvSerieSchedaWrapper .textWrapper {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: right;
-    height: 100%;
-    max-height: 600px;
-    padding: 30px 30px;
-    
-}
-
-.tvSerieSchedaWrapper .textWrapper h1 {
-    font-size: 50px;
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-
-.tvSerieSchedaWrapper a {
-    text-decoration: none;
-    color: white;
-    font-size: 30px;
-}
-
-.tvSerieSchedaWrapper a:hover {
-    text-decoration: underline;
-}
-
-.tvSerieSchedaWrapper p {
-    width: 500px;
-    font-size: 20px;
-    word-spacing: 3px;
-    line-height: 25px;
-}
-
-.tvSerieSchedaWrapper .textWrapper h5 {
-    margin-top: 5px;
-    font-weight: 500;
-    word-spacing: 3px;
-}
-
-.tvSerieSchedaWrapper img {
-    display: flex;
-    flex-direction: row;
-    width: 400px;
-    padding: 30px 30px 40px;
-}
