--- a/style.css
+++ b/style.css
@@ -63,21 +63,14 @@ header {
 /* ---------------FAKE TRAILER--------------- */
 
 .fakeTrailer {
+    width: 100%;
+    height: 600px;
     position: relative;
     text-align: left;
     color: white;
+    background-image: url('https://picsum.photos/1990/600');
 }
 
-.fakeTrailer img {
-    position: relative;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    max-width: 100%;
-    max-height: 600px;
-}
 
 .fakeTrailer .top-left {
     border-radius: 5px;
@@ -95,15 +88,15 @@ header {
 
 .fakeTrailer .top-left h1 {
     display: flex;
-    font-size: 100px;
-    margin: 10px;
+    font-size: 80px;
+    margin: 5px;
     text-shadow: 2px 4px rgba(0, 0, 0, 0.550);
 }
 
 .fakeTrailer .top-left h3 {
     display: flex;
-    font-size: 40px;
-    margin: 10px;
+    font-size: 30px;
+    margin: 5px;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.550);
 }
 
@@ -111,23 +104,18 @@ header {
     display: flex;
     font-size: 20px;
     width: 96%;
-    margin: 20px 10px;
-    text-shadow: 2px 1px rgba(0, 0, 0, 0.550);
+    margin: 10px 10px;
+    text-shadow: 2px 1px rgba(53, 9, 66, 0.55);
     line-height: 30px;
-    overflow-block: 0;
-
+    overflow: hidden;
 }
 
-/* .fakeTrailer .bottom-left {
-    background-color: rgba(77, 77, 77, 0.295);
-    position: absolute;
-    bottom: 40px;
-    left: 30px;
-    width: 30%;
-} */
+.fakeTrailer .top-left p:hover {
+    overflow-y: auto;
+    scrollbar-width: thin;
+}
 
 .fakeTrailer .top-left button {
-   
     width: 150px;
     height: 50px;
     border-radius: 5px;
@@ -135,7 +123,8 @@ header {
     font-family: 'Varela Round', sans-serif;
     font-weight: bold;
     font-size: 20px;
-    margin: 20px 30px;
+    margin: 20px 20px;
+    padding: 8px;
     
 }
 
@@ -250,9 +239,11 @@ footer p {
     color: white;
     border-style: none;
     padding: 10px;
-    margin: 10px 25px;
+    margin: 20px 25px;
     font-size: 20px;
     border-radius: 10px;
+    border-style: solid;
+    border-color: white;
 }
 
 .button button:hover {
@@ -357,6 +348,38 @@ footer p {
     }
 
     .fakeTrailer {
+        display: flex;
+        justify-content: center;
+        width: 150%;
+        height: 300px;
+        position: relative;
+        align-items: center;
+        margin: auto;
+        text-align: center;
+        flex-direction: column;
+    }
+
+    .fakeTrailer .top-left {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+        text-align: center;
+        align-items: center;
+    }
+
+    .fakeTrailer .top-left h1 {
+        font-size: 50px;
+        margin: auto;
+    }
+
+    .fakeTrailer .top-left h3 {
+        font-size: 30px;
+        margin: auto;
+    }
+
+    .fakeTrailer .top-left p, button {
         display: none;
     }
     
@@ -374,7 +397,7 @@ footer p {
         align-items: center;
         width: 100%;
         justify-content: center;
-        margin: auto;
+        margin: 10px auto;
         text-align: center;
     }
 
@@ -393,9 +416,11 @@ footer p {
         width: 90px;
         height: 40px;
         font-size: 15px;
-        line-height: 10px;
-        margin: 10px auto;
+        margin: 0 auto;
+        padding: 2px;
         text-align: center;
+        border-style: solid;
+        border-color: white;
     }
 
     .tvSerieSchedaWrapper {
@@ -406,7 +431,6 @@ footer p {
         flex-direction: column;
         flex-wrap: wrap;
         text-align: center;
-        margin: 0;
         padding: 0;
     }
 
@@ -476,6 +500,39 @@ footer p {
     }
 
     .fakeTrailer {
+        display: flex;
+        justify-content: center;
+        width: 150%;
+        height: 300px;
+        position: relative;
+        align-items: center;
+        margin: auto;
+        text-align: center;
+        flex-direction: column;
+    }
+    
+    .fakeTrailer .top-left {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+        text-align: center;
+        align-items: center;
+    }
+    
+    .fakeTrailer .top-left h1 {
+        font-size: 50px;
+        margin: auto;
+    }
+    
+    .fakeTrailer .top-left h3 {
+        font-size: 30px;
+        margin: auto;
+    }
+    
+    .fakeTrailer .top-left p,
+    button {
         display: none;
     }
 
